crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_hour_h12_placeholder.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&placeholder_api.segment_attrs(&DateSegmentKind::Hour))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "hour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Hour",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "12",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "hh",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
