crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_hour_h12_set.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Hour))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "hour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Hour",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "12",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "2",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "2",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "meeting-time-error-message",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
