crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_minute_set.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Minute))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "minute",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Minute",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "59",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "30",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "30",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "meeting-time-error-message",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
