crates/ars-components/src/date_time/time_field/snapshots/ars_components__date_time__time_field__tests__segment_second_set.snap
---
source: crates/ars-components/src/date_time/time_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Second))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "time-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "second",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Second",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "59",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "45",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "45",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "meeting-time-error-message",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
